--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <!-- Polices Roboto et Roboto Slab -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Remplacer le fichier d'image favicon par celui correspondant à votre appli -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/img/logos/Logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Brève description de l'application Web" />
     <title>Titre de l'application</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>JavaScript doit être activé pour utiliser cette application.</noscript>
     <div id="racine"></div>
-  </body>
+</body>
+
 </html>
