--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Remplacer le fichier d'image favicon par celui correspondant à votre appli -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" href="%PUBLIC_URL%/img/logos/Logo1.png" />
+    <link rel="icon" href="%PUBLIC_URL%/img/logos/Logo1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Brève description de l'application Web" />
-    <title>Titre de l'application</title>
+    <title>Exercise 1 - Signets</title>
 </head>
 
 <body>
